logfiles/RFR_124567031_0.err
  File "genMGP_trainRF1.py", line 140
    },
    ^
SyntaxError: invalid syntax
